--- a/src/main/resources/templates/objects/detail.html
+++ b/src/main/resources/templates/objects/detail.html
@@ -59,8 +59,7 @@
                                isWord=${(file.contentType != null and (file.contentType == 'application/msword'
                                       or file.contentType.startsWith('application/vnd.openxmlformats-officedocument.wordprocessingml')))
                                       or (#strings.equalsIgnoreCase(file.extension, 'doc') or #strings.equalsIgnoreCase(file.extension, 'docx'))}"
-                     th:classappend="${isExcel} ? ' excel-preview-container' : ''"
-                     th:classappend="${isWord} ? ' word-preview-container' : ''">
+                     th:classappend="${(isExcel ? ' excel-preview-container' : '') + (isWord ? ' word-preview-container' : '')}">
                     <img th:if="${isImage}"
                          th:src="@{|/objects/${object.id}/files/${file.id}|}"
                          th:alt="${file.originalFilename}">
