Fix preview link fallback to download URL

--- a/src/main/resources/templates/objects/detail.html
+++ b/src/main/resources/templates/objects/detail.html
@@ -51,31 +51,22 @@
         <div class="file-gallery" th:if="${!#lists.isEmpty(object.files)}">
             <div class="file-card" th:each="file : ${object.files}">
                 <div class="file-preview"
-                     th:with="extension=${file.extension != null ? file.extension : ''},
-                              isImage=${file.contentType != null and file.contentType.startsWith('image/')},
-                              isPdf=${file.contentType == 'application/pdf'},
-                              isExcel=${(file.contentType != null and (file.contentType.startsWith('application/vnd.ms-excel')
-                                      or file.contentType.startsWith('application/vnd.openxmlformats-officedocument.spreadsheetml')))
-                                      or (#strings.equalsIgnoreCase(extension, 'xls') or #strings.equalsIgnoreCase(extension, 'xlsx'))},
-                               isWord=${(file.contentType != null and (file.contentType == 'application/msword'
-                                      or file.contentType.startsWith('application/vnd.openxmlformats-officedocument.wordprocessingml')))
-                                      or (#strings.equalsIgnoreCase(extension, 'doc') or #strings.equalsIgnoreCase(extension, 'docx'))}"
-                     th:classappend="${(isExcel ? ' excel-preview-container' : '') + (isWord ? ' word-preview-container' : '')}">
-                    <img th:if="${isImage}"
+                     th:classappend="${(file.isExcelType() ? ' excel-preview-container' : '') + (file.isWordType() ? ' word-preview-container' : '')}">
+                    <img th:if="${file.isImageType()}"
                          th:src="@{|/objects/${object.id}/files/${file.id}|}"
                          th:alt="${file.originalFilename}">
-                    <iframe th:if="${isPdf}"
+                    <iframe th:if="${file.isPdfType()}"
                             th:src="@{|/objects/${object.id}/files/${file.id}|}"
                             loading="lazy"></iframe>
-                    <iframe th:if="${isExcel}"
+                    <iframe th:if="${file.isExcelType()}"
                             class="sheet-preview"
                             th:src="@{|/objects/${object.id}/files/${file.id}/preview|}"
                             loading="lazy"></iframe>
-                    <iframe th:if="${isWord}"
+                    <iframe th:if="${file.isWordType()}"
                             class="word-preview-frame"
                             th:src="@{|/objects/${object.id}/files/${file.id}/preview|}"
                             loading="lazy"></iframe>
-                    <div class="file-icon" th:if="${!isImage and !isPdf and !isExcel}">
+                    <div class="file-icon" th:if="${file.isUnknownType()}">
                         <span class="file-ext"
                               th:text="${#strings.isEmpty(file.extension) ? 'FILE' : #strings.toUpperCase(file.extension)}">
                             DOC
@@ -89,10 +80,8 @@
                     <div class="file-actions">
                         <a href="#"
                            class="button secondary open-preview"
-                           th:with="downloadUrl=@{/objects/{objectId}/files/{fileId}(objectId=${object.id}, fileId=${file.id})},
-                                    previewUrl=@{/objects/{objectId}/files/{fileId}/preview(objectId=${object.id}, fileId=${file.id})}"
-                           th:attr="data-preview-url=${(isExcel or isWord) ? previewUrl : downloadUrl},
-                                    data-file-name=${file.originalFilename}">
+                           th:data-preview-url="${file.hasCustomPreview()} ? @{/objects/{objectId}/files/{fileId}/preview(objectId=${object.id}, fileId=${file.id})} : @{/objects/{objectId}/files/{fileId}(objectId=${object.id}, fileId=${file.id})}"
+                           th:data-file-name="${file.originalFilename}">
                             Открыть
                         </a>
                         <a th:href="@{|/objects/${object.id}/files/${file.id}?download=true|}" class="button">Скачать</a>
